--- a/action.yml
+++ b/action.yml
@@ -53,7 +53,7 @@ runs:
         python -m pip install --upgrade pip
         pip install packaging PyGithub
 
-    - name: Create Tag
+  - name: Create Tag
       id: create-tag
       shell: bash
       env:
@@ -68,7 +68,8 @@ runs:
         GITHUB_REPOSITORY: ${{ github.repository }}
         GITHUB_SHA: ${{ github.sha }}
       run: |
-        python scripts/create_tag.py
+    if [ -z "$GITHUB_ACTION_PATH" ]; then echo "Missing GITHUB_ACTION_PATH"; exit 1; fi
+    python "$GITHUB_ACTION_PATH/scripts/create_tag.py"
 
     - name: Output values (debug)
       if: always()
